--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -23,7 +23,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Use pnpm
       run: |
-        npm install -g pnpm
+        npm install -g pnpm@6.35.1
 
     - name: Build
       run: |
