--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: NodeJS with Webpack
+name: release
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x]
+        node-version: 16.17.0
 
     steps:
       - uses: actions/checkout@v4
@@ -35,9 +35,8 @@ jobs:
         run: |
           zip -r dist.zip dist
 
-      - name: Create Release
-        uses: actions/create-release@v1
-        with:
+      - name: Release
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: 'dist.zip'
-          allowUpdates: true
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: npx semantic-release
