--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: 16.17.0
+        node-version: '16.17.0'
 
     steps:
       - uses: actions/checkout@v4
