--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ name: release
 on:
   push:
     branches: ['master']
+
   pull_request:
     branches: ['master']
 
@@ -22,21 +23,15 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Use pnpm
-        run: |
-          npm install -g pnpm
-
       - name: Build
         run: |
+          npm install -g pnpm
           pnpm install
           pnpm run build
-
-      - name: zip dist
-        run: |
           zip -r dist.zip dist
 
       - name: Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: dist.zip
