--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,12 @@ name: release
 
 on:
   push:
-    branches: ['master']
+    tags:
+      - 'v*'
 
   pull_request:
-    branches: ['master']
+    tags:
+      - 'v*'
 
 jobs:
   build:
