--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,3 +37,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: dist.zip
+          generate_release_notes: true
