--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@douyinfe/semi-ui": "^2.60.0",
     "@modern-js/runtime": "2.53.0",
     "axios": "^1.7.2",
+    "lodash-es": "^4.17.21",
     "react": "~18.2.0",
     "react-dom": "~18.2.0"
   },
@@ -39,6 +40,7 @@
     "@modern-js/eslint-config": "2.53.0",
     "@modern-js/tsconfig": "2.53.0",
     "@types/jest": "~29.2.4",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
     "@types/react-dom": "~18.0.10",
