feat: 修改字段名

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,8 @@ jobs:
           npm install -g pnpm
           pnpm install
           pnpm run build
-          zip -r dist.zip dist
+          mv dist public
+          zip -r dist.zip public
 
       - name: Release
         uses: softprops/action-gh-release@v2
