--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@formily/semi": "^1.0.3",
     "@modern-js/runtime": "2.53.0",
     "axios": "^1.7.2",
+    "classnames": "^2.5.1",
     "lodash-es": "^4.17.21",
     "react": "~18.2.0",
     "react-dom": "~18.2.0"
