--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "djwl-module": "^1.0.6",
     "es-toolkit": "^1.27.0",
     "react": "~18.2.0",
-    "react-dom": "~18.2.0"
+    "react-dom": "~18.2.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@douyinfe/semi-webpack-plugin": "^2.65.0",
