--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@semi-bot/semi-theme-kansoku": "^1.0.1",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "djwl-module": "^1.0.6",
     "es-toolkit": "^1.27.0",
     "react": "~18.2.0",
